# FE14Calculator

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  package.json  service_worker.js  tailwindInput.css
.cargo/: config.toml
.github/workflows/: build.yml
docs/: CNAME  fe14_calculator_ui-2e8433a9c17d17a4.js  fe14_calculator_ui-2e8433a9c17d17a4_bg.wasm  fe14_calculator_ui-3f1fb50c200ff62f.js  fe14_calculator_ui-3f1fb50c200ff62f_bg.wasm  fe14_calculator_ui-8a4883966c1022d2.js  fe14_calculator_ui-8a4883966c1022d2_bg.wasm  fe14_calculator_ui.js  fe14_calculator_ui_bg.wasm  index.html  service_worker.js  styles-5a37a769015b2d30.css  styles-bf5123218a0c7477.css  styles.css
fe14_calculator_core/: Cargo.toml
fe14_calculator_core/py_src/: Character.py  Class.py  LoadXL.py  data.xls  main.py
fe14_calculator_core/src/: attribute.rs  character.json  character.rs  class.json  class.rs  class_type.rs  lib.rs  main.rs  stats.rs  utils.rs
fe14_calculator_core/src/character/: character_with_undo.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
