[package]
name = "fe14_calculator_ui"
version = "0.1.0"
license = "AGPL-3.0"
repository = "https://github.com/BillGoldenWater/FE14Calculator.git"
authors = ["火纹梅戚", "Golden_Water"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.2", features = ["stable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
fe14_calculator_core = { path = "fe14_calculator_core" }

[workspace]
members = ["src-tauri", "fe14_calculator_core"]
