[package]
name = "fe14_calculator_core"
version = "0.1.0"
license = "AGPL-3.0"
repository = "https://github.com/BillGoldenWater/FE14Calculator.git"
authors = ["火纹梅戚", "Golden_Water"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
