[package]
name = "fe14_calculator"
version = "0.1.0"
license = "AGPL-3.0"
repository = "https://github.com/BillGoldenWater/FE14Calculator.git"
authors = ["火纹梅戚", "Golden_Water"]
edition = "2021"

[lib]
name = "fe14_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.4", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.7", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
